feat: Add comprehensive GitHub Actions CI/CD pipeline for automated releases
AUTOMATION INFRASTRUCTURE:
This commit establishes a complete automated build and release system for the
Bazzite Gaming Optimization Suite, providing professional-grade CI/CD capabilities
with executable generation, comprehensive release notes, and multi-trigger support.

GITHUB WORKFLOWS IMPLEMENTED:

1. PRIMARY RELEASE WORKFLOW (.github/workflows/build-release.yml)
   Purpose: Automated build and release system triggered by VERSION file changes

   Features:
   - Automatic version detection from VERSION file
   - PyInstaller executable generation with UPX compression
   - Bazzite Linux x86_64 architecture targeting
   - Comprehensive release notes generation with technical specifications
   - Automated asset uploading (executable + auxiliary tools archive)
   - Build information appending (preserves custom release notes)
   - Git tagging with proper semantic versioning

   Triggers:
   - Push to main branch with VERSION file changes (auto-release)
   - Manual workflow dispatch with version override options

   Build Process:
   - Ubuntu latest build environment
   - Python 3.11 with PyInstaller
   - System dependencies: build-essential, python3-dev, binutils, patchelf, upx-ucl
   - Hidden imports: psutil, threading, re, platform, subprocess, json, tempfile, hashlib, statistics
   - Compression: UPX LZMA for optimal executable size
   - Testing: Automated verification of --version and --list-profiles functionality

2. MANUAL RELEASE TRIGGER (.github/workflows/manual-release.yml)
   Purpose: On-demand release generation with advanced options

   Features:
   - Version override capability (use custom version vs VERSION file)
   - Force rebuild option (removes existing tags/releases)
   - Pre-release marking support
   - Source code archives inclusion
   - Existing tag detection and handling

   Workflow Integration:
   - Calls main build-release.yml workflow
   - Adds source archives (tar.gz

--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,14 @@ dist/                        # Distribution directories
 *.egg-info/                  # Python egg info
 *.spec                       # PyInstaller spec files
 
+# GitHub Actions artifacts
+artifacts/                   # GitHub Actions artifacts directory
+release-notes.md             # Generated release notes
+build-info.md                # Generated build information
+*.tar.gz                     # Generated tar archives (for releases)
+*.zip                        # Generated zip archives (for releases)
+bazzite-config-*-source.*    # Generated source archives
+
 # ============================================================================
 # TESTING AND QUALITY ASSURANCE
 # ============================================================================
