fix: resolve YAML syntax error in GitHub Actions workflow
- Remove single quotes from heredoc to enable variable expansion
- Use ${VERSION} and ${CHANGELOG_ENTRY} directly in heredoc
- Remove redundant sed replacement for $VERSION placeholder
- Fix line 207 YAML syntax issue preventing workflow execution

Resolves GitHub Actions workflow validation error for automated release pipeline

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -199,12 +199,12 @@ jobs:
           fi
           
           # Create comprehensive release notes
-          cat > release-notes.md << 'EOL'
-# 🎮 Bazzite Gaming Optimization Suite v$VERSION
+          cat > release-notes.md << EOL
+# 🎮 Bazzite Gaming Optimization Suite v${VERSION}
           
 ## 🚀 Release Overview
           
-$CHANGELOG_ENTRY
+${CHANGELOG_ENTRY}
           
 ## 📊 Master Script Specifications
           
@@ -316,8 +316,6 @@ tar -xzf bazzite-gaming-suite-auxiliary-x86_64.tar.gz
           
 EOL
           
-          # Replace placeholders with actual values
-          sed -i "s/\$VERSION/$VERSION/g" release-notes.md
           
       - name: Create Git tag
         run: |
